POM changes for J16